--- a/index.html
+++ b/index.html
@@ -692,14 +692,18 @@
     </div>
     
     <!-- 机器人管理 - 独立菜单 -->
-    <div 
+    <!--div 
         class="nav-item" 
         :class="{ active: activeNav === 'robots' }"
         @click="activeNav = 'robots'"
     >
         <i class="fas fa-robot"></i>
         <span class="nav-text">机器人管理</span>
-    </div>
+		</div-->
+<a href="robots.html" class="nav-item" style="text-decoration: none;">
+    <i class="fas fa-robot"></i>
+    <span class="nav-text">机器人管理</span>
+</a>
 
 	<!-- 数据管理与分析 - 包含子菜单 -->
 <div class="nav-item-wrapper">
@@ -3101,3 +3105,4 @@ taskCreateDialog,
 </body>
 
 </html>
+
