--- a/data.html
+++ b/data.html
@@ -407,7 +407,7 @@
             <div class="sidebar-header">
                 <div class="logo">
                     <i class="fas fa-robot"></i>
-                    <span class="logo-text">机器人管理平台</span>
+                    <span class="logo-text">机器人后台管理平台</span>
                 </div>
             </div>
             
@@ -623,4 +623,5 @@
         }).use(ElementPlus).mount('#app');
     </script>
 </body>
+
 </html>
