修改侧边栏标题

--- a/robots.html
+++ b/robots.html
@@ -325,7 +325,7 @@
             <div class="sidebar-header">
                 <div class="logo">
                     <i class="fas fa-robot"></i>
-                    <span class="logo-text">机器人管理平台</span>
+                    <span class="logo-text">机器人后台管理平台</span>
                 </div>
             </div>
             
@@ -643,4 +643,5 @@
         }).use(ElementPlus).mount('#app');
     </script>
 </body>
+
 </html>
