修改任务管理并更新侧边栏

--- a/data.html
+++ b/data.html
@@ -2776,11 +2776,11 @@
                         </a>
                         <a href="tasks.html#scheduling" class="nav-item sub-item">
                             <i class="fas fa-calendar-alt"></i>
-                            <span class="nav-text">任务调度</span>
+                            <span class="nav-text">计划管理</span>
                         </a>
-                        <a href="tasks.html#monitoring" class="nav-item sub-item">
+                        <a href="tasks.html#abnormal" class="nav-item sub-item">
                             <i class="fas fa-eye"></i>
-                            <span class="nav-text">任务监控</span>
+                            <span class="nav-text">异常处理</span>
                         </a>
                     </div>
                 </div>
@@ -5232,7 +5232,6 @@
     </script>
 </body>
 </html>
-
 
 
 
