--- a/app.html
+++ b/app.html
@@ -511,11 +511,11 @@
                         </a>
                         <a href="tasks.html#scheduling" class="nav-item sub-item" :class="{ active: activeNav === 'scheduling' }" @click="setActiveNav('scheduling')">
                             <i class="fas fa-calendar-alt"></i>
-                            <span class="nav-text">任务调度</span>
+                            <span class="nav-text">计划管理</span>
                         </a>
-                        <a href="tasks.html#monitoring" class="nav-item sub-item" :class="{ active: activeNav === 'monitoring' }" @click="setActiveNav('monitoring')">
+                        <a href="tasks.html#abnormal" class="nav-item sub-item" :class="{ active: activeNav === 'monitoring' }" @click="setActiveNav('monitoring')">
                             <i class="fas fa-eye"></i>
-                            <span class="nav-text">任务监控</span>
+                            <span class="nav-text">异常处理</span>
                         </a>
                     </div>
                 </div>
