--- a/mode.html
+++ b/mode.html
@@ -1355,11 +1355,11 @@
                         </a>
                         <a href="tasks.html#scheduling" class="nav-item sub-item" :class="{ active: activeNav === 'scheduling' }">
                             <i class="fas fa-calendar-alt"></i>
-                            <span class="nav-text">任务调度</span>
+                            <span class="nav-text">计划管理</span>
                         </a>
-                        <a href="tasks.html#monitoring" class="nav-item sub-item" :class="{ active: activeNav === 'monitoring' }">
+                        <a href="tasks.html#abnormal" class="nav-item sub-item" :class="{ active: activeNav === 'monitoring' }">
                             <i class="fas fa-eye"></i>
-                            <span class="nav-text">任务监控</span>
+                            <span class="nav-text">异常处理</span>
                         </a>
                     </div>
                 </div>
