--- a/app.html
+++ b/app.html
@@ -560,40 +560,52 @@
                 </div>
             </div>
 
-                <!-- 模式管理折叠菜单（修复a标签嵌套问题） -->
+                <!-- 模式管理折叠菜单 -->
                 <div class="nav-item-wrapper">
-                    <div 
-                       class="nav-item"
-                       :class="{ 'active-parent': expandedMenu === 'modeManagement', 'expanded': expandedMenu === 'modeManagement' }"
-                       @click="toggleMenu('modeManagement')"
-                    >
-                       <i class="fas fa-cogs"></i>
-                       <span class="nav-text">模式管理</span>
-                       <i 
-                         class="fas fa-chevron-down arrow-icon" 
-                         :class="{ 'rotated': expandedMenu === 'modeManagement' }"
-                       ></i>
-                     </div>
+                    <div
+                         class="nav-item"
+                        :class="{ 
+                            'active-parent': expandedMenu === 'modeManagement', 
+                            'expanded': expandedMenu === 'modeManagement' 
+                          }"
+                          @click="toggleMenu('modeManagement')"
+                     >
+                     <i class="fas fa-cogs"></i>
+                     <span class="nav-text">模式管理</span>
+                     <i
+                        class="fas fa-chevron-down arrow-icon"
+                        :class="{ 'rotated': expandedMenu === 'modeManagement' }"
+                     ></i>
+                </div>
 
-                     <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
-                       <a href="mode.html#status" class="nav-item sub-item" :class="{ active: activeNav === 'modeStatus' }" @click="setActiveNav('modeStatus')">
-                         <i class="fas fa-heartbeat"></i>
-                         <span class="nav-text">状态监控</span>
-                       </a>
-                       <a href="mode.html#switch" class="nav-item sub-item" :class="{ active: activeNav === 'modeSwitch' }" @click="setActiveNav('modeSwitch')">
-                         <i class="fas fa-exchange-alt"></i>
-                         <span class="nav-text">模式切换</span>
-                       </a>
-                       <a href="mode.html#history" class="nav-item sub-item" :class="{ active: activeNav === 'modeHistory' }" @click="setActiveNav('modeHistory')">
-                         <i class="fas fa-history"></i>
-                         <span class="nav-text">历史记录</span>
-                       </a>
-                       <a href="mode.html#quick" class="nav-item sub-item" :class="{ active: activeNav === 'modeQuick' }" @click="setActiveNav('modeQuick')">
-                         <i class="fas fa-bolt"></i>
-                         <span class="nav-text">快速操作</span>
-                       </a>
-                   </div>
-               </div>
+                 <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
+                    <a href="mode.html#switch" class="nav-item sub-item"
+                        :class="{ active: activeNav === 'switch' }" @click="setActiveNav('switch')">
+                        <i class="fas fa-exchange-alt"></i>
+                        <span class="nav-text">模式切换</span>
+                    </a>
+                    <a href="mode.html#schedule" class="nav-item sub-item"
+                        :class="{ active: activeNav === 'schedule' }" @click="setActiveNav('schedule')">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span class="nav-text">模式排程</span>
+                    </a>
+                    <a href="mode.html#history" class="nav-item sub-item"
+                        :class="{ active: activeNav === 'history' }" @click="setActiveNav('history')">
+                        <i class="fas fa-history"></i>
+                       <span class="nav-text">历史记录</span>
+                    </a>
+                    <a href="mode.html#quick" class="nav-item sub-item"
+                       :class="{ active: activeNav === 'quick' }" @click="setActiveNav('quick')">
+                       <i class="fas fa-bolt"></i>
+                       <span class="nav-text">快速操作</span>
+                     </a>
+                    <a href="mode.html#edit" class="nav-item sub-item"
+                      :class="{ active: activeNav === 'edit' }" @click="setActiveNav('edit')">
+                      <i class="fas fa-edit"></i>
+                      <span class="nav-text">编辑模式</span>
+                    </a>
+              </div>
+       </div>
                
                 <!-- 数据管理与分析 -->
                 <div class="nav-item-wrapper">
@@ -1252,5 +1264,6 @@
     </script>
 </body>
 </html>
+
 
 
