--- a/data.html
+++ b/data.html
@@ -2821,6 +2821,12 @@
                         <i class="fas fa-sync-alt"></i>
                         <span class="nav-text">应用更新管理</span>
                     </a>
+					<!-- 新增交互历史列表菜单项 -->
+                    <a href="app.html#interactionHistory" class="nav-item sub-item"
+                       :class="{ active: activeNav === 'interactionHistory' }" @click="setActiveNav('interactionHistory')">
+                        <i class="fas fa-history"></i>
+                        <span class="nav-text">交互历史列表</span>
+                    </a>
                 </div>
             </div>
 
@@ -5242,6 +5248,7 @@
     </script>
 </body>
 </html>
+
 
 
 
