--- a/index.html
+++ b/index.html
@@ -1426,53 +1426,46 @@
                     </div>
                 </div>
                 
-                <!-- 模式管理折叠菜单 -->
-                <div class="nav-item-wrapper">
-                    <div
-                        class="nav-item"
-                        :class="{ 
-                            'active-parent': expandedMenu === 'modeManagement', 
-                            'expanded': expandedMenu === 'modeManagement' 
-                        }"
-                        @click="toggleMenu('modeManagement')"
-                    >
-                        <i class="fas fa-cogs"></i>
-                        <span class="nav-text">模式管理</span>
-                        <i
-                            class="fas fa-chevron-down arrow-icon"
-                            :class="{ 'rotated': expandedMenu === 'modeManagement' }"
-                        ></i>
-                    </div>
-
-                    <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
-                        <a href="mode.html#switch" class="nav-item sub-item"
-                            :class="{ active: activeNav === 'switch' }" @click="setActiveNav('switch')">
-                            <i class="fas fa-exchange-alt"></i>
-                            <span class="nav-text">模式切换</span>
-                        </a>
-                        <a href="mode.html#schedule" class="nav-item sub-item"
-                            :class="{ active: activeNav === 'schedule' }" @click="setActiveNav('schedule')">
-                            <i class="fas fa-calendar-alt"></i>
-                            <span class="nav-text">模式排程</span>
-                        </a>
-                        <a href="mode.html#history" class="nav-item sub-item"
-                            :class="{ active: activeNav === 'history' }" @click="setActiveNav('history')">
-                            <i class="fas fa-history"></i>
-                            <span class="nav-text">历史记录</span>
-                        </a>
-                        <a href="mode.html#quick" class="nav-item sub-item"
-                           :class="{ active: activeNav === 'quick' }" @click="setActiveNav('quick')">
-                           <i class="fas fa-bolt"></i>
-                           <span class="nav-text">快速操作</span>
-                        </a>
-                        <a href="mode.html#edit" class="nav-item sub-item"
-                          :class="{ active: activeNav === 'edit' }" @click="setActiveNav('edit')">
-                          <i class="fas fa-edit"></i>
-                          <span class="nav-text">编辑模式</span>
-                        </a>
-                    </div>
-                </div>
-
+              <!-- 模式管理折叠菜单 -->
+              <div class="nav-item-wrapper">
+                  <div 
+                     class="nav-item" 
+                     :class="{ 
+                         'active-parent': isModeManagementActive,
+                         'expanded': expandedMenu === 'modeManagement'
+                     }"
+                    @click="toggleMenu('modeManagement')"
+                   >
+                   <i class="fas fa-cogs"></i>
+                   <span class="nav-text">模式管理</span>
+                      <i 
+                          class="fas fa-chevron-down arrow-icon" 
+                          :class="{ 'rotated': expandedMenu === 'modeManagement' }"
+                      ></i>
+                  </div>
+                  <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
+                  <a href="modes.html#quick" class="nav-item sub-item" :class="{ active: activeNav === 'quick' }">
+                        <i class="fas fa-bolt"></i>
+                        <span class="nav-text">快捷操作</span>
+                  </a>
+                  <a href="modes.html#switch" class="nav-item sub-item" :class="{ active: activeNav === 'switch' }">
+                       <i class="fas fa-exchange-alt"></i>
+                       <span class="nav-text">模式切换</span>
+                  </a>
+                  <a href="modes.html#schedule" class="nav-item sub-item" :class="{ active: activeNav === 'schedule' }">
+                       <i class="fas fa-calendar-alt"></i>
+                       <span class="nav-text">模式排程</span>
+                  </a>
+                  <a href="modes.html#history" class="nav-item sub-item" :class="{ active: activeNav === 'history' }">
+                       <i class="fas fa-history"></i>
+                       <span class="nav-text">历史记录</span>
+                  </a>
+                  <a href="modes.html#edit" class="nav-item sub-item" :class="{ active: activeNav === 'edit' }">
+                       <i class="fas fa-edit"></i>
+                       <span class="nav-text">编辑模式</span>
+                  </a>
+             </div>
+         </div>
                 <!-- 数据管理与分析 - 包含子菜单 -->
                 <div class="nav-item-wrapper">
                     <div 
@@ -2075,4 +2068,5 @@
     </script>
 </body>
 </html>
+
 
