--- a/app.html
+++ b/app.html
@@ -703,47 +703,56 @@
                 </div>
             </div>
 
+
+				<div class="nav-item-wrapper">
     <!-- 模式管理折叠菜单 -->
-              <div class="nav-item-wrapper">
-                  <div 
-                     class="nav-item" 
-                     :class="{ 
-                         'active-parent': isModeManagementActive,
-                         'expanded': expandedMenu === 'modeManagement'
-                     }"
-                    @click="toggleMenu('modeManagement')"
-                   >
-                   <i class="fas fa-cogs"></i>
-                   <span class="nav-text">模式管理</span>
-                      <i 
-                          class="fas fa-chevron-down arrow-icon" 
-                          :class="{ 'rotated': expandedMenu === 'modeManagement' }"
-                      ></i>
-                  </div>
-                  <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
-                  <a href="modes.html#quick" class="nav-item sub-item" :class="{ active: activeNav === 'quick' }">
-                        <i class="fas fa-bolt"></i>
-                        <span class="nav-text">快捷操作</span>
-                  </a>
-                  <a href="modes.html#switch" class="nav-item sub-item" :class="{ active: activeNav === 'switch' }">
-                       <i class="fas fa-exchange-alt"></i>
-                       <span class="nav-text">模式切换</span>
-                  </a>
-                  <a href="modes.html#schedule" class="nav-item sub-item" :class="{ active: activeNav === 'schedule' }">
-                       <i class="fas fa-calendar-alt"></i>
-                       <span class="nav-text">模式排程</span>
-                  </a>
-                  <a href="modes.html#history" class="nav-item sub-item" :class="{ active: activeNav === 'history' }">
-                       <i class="fas fa-history"></i>
-                       <span class="nav-text">历史记录</span>
-                  </a>
-                  <a href="modes.html#edit" class="nav-item sub-item" :class="{ active: activeNav === 'edit' }">
-                       <i class="fas fa-edit"></i>
-                       <span class="nav-text">编辑模式</span>
-                  </a>
-             </div>
-         </div>
-               
+    <a
+        href="mode3.html#quick"
+        class="nav-item"
+        :class="{ expanded: expandedMenu === 'modeManagement' }"
+        @click.stop="toggleMenu('modeManagement')"
+    >
+        <i class="fas fa-cogs"></i>
+        <span class="nav-text">模式管理</span>
+        <i
+            class="fas fa-chevron-down arrow-icon"
+            :class="{ 'rotated': expandedMenu === 'modeManagement' }"
+        ></i>
+    </a>
+
+    <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
+        <a href="mode3.html#quick" class="nav-item sub-item" 
+           :class="{ active: activeModeTab === 'quick' }"
+           @click.stop="switchModeTab('quick')">
+            <i class="fas fa-bolt"></i>
+            <span class="nav-text">快捷操作</span>
+        </a>
+        <a href="mode3.html#switch" class="nav-item sub-item"
+           :class="{ active: activeModeTab === 'switch' }"
+           @click.stop="switchModeTab('switch')">
+            <i class="fas fa-exchange-alt"></i>
+            <span class="nav-text">模式切换</span>
+        </a>
+        <a href="mode3.html#schedule" class="nav-item sub-item"
+           :class="{ active: activeModeTab === 'schedule' }"
+           @click.stop="switchModeTab('schedule')">
+            <i class="fas fa-calendar-alt"></i>
+            <span class="nav-text">模式排程</span>
+        </a>
+        <a href="mode3.html#history" class="nav-item sub-item"
+           :class="{ active: activeModeTab === 'history' }"
+           @click.stop="switchModeTab('history')">
+            <i class="fas fa-history"></i>
+            <span class="nav-text">历史记录</span>
+        </a>
+        <a href="mode3.html#edit" class="nav-item sub-item"
+           :class="{ active: activeModeTab === 'edit' }"
+           @click.stop="switchModeTab('edit')">
+            <i class="fas fa-edit"></i>
+            <span class="nav-text">编辑模式</span>
+        </a>
+    </div>
+</div>
 				
                 <!-- 数据管理与分析 -->
                 <div class="nav-item-wrapper">
@@ -1966,5 +1975,6 @@
     </script>
 </body>
 </html>
+
 
 
