--- a/app.html
+++ b/app.html
@@ -707,7 +707,7 @@
 				<div class="nav-item-wrapper">
     <!-- 模式管理折叠菜单 -->
     <a
-        href="mode3.html#quick"
+        href="mode.html#quick"
         class="nav-item"
         :class="{ expanded: expandedMenu === 'modeManagement' }"
         @click.stop="toggleMenu('modeManagement')"
@@ -1975,6 +1975,7 @@
     </script>
 </body>
 </html>
+
 
 
 
