--- a/robots.html
+++ b/robots.html
@@ -689,41 +689,55 @@
             </div>
 
 
-            <div class="nav-item-wrapper">
-                <!-- 模式管理折叠菜单 -->
-                <a
-                        href="mode.html#status"
-                        class="nav-item"
-                        :class="{ expanded: expandedMenu === 'modeManagement' }"
-                        @click.stop="toggleMenu('modeManagement')"
-                >
-                    <i class="fas fa-cogs"></i>
-                    <span class="nav-text">模式管理</span>
-                    <i
-                            class="fas fa-chevron-down arrow-icon"
-                            :class="{ 'rotated': expandedMenu === 'modeManagement' }"
-                    ></i>
-                </a>
+           				<div class="nav-item-wrapper">
+              <!-- 模式管理折叠菜单 -->
+              <a
+                  href="mode.html#quick"
+                  class="nav-item"
+                  :class="{ expanded: expandedMenu === 'modeManagement' }"
+                  @click.stop="toggleMenu('modeManagement')"
+               >
+                  <i class="fas fa-cogs"></i>
+                  <span class="nav-text">模式管理</span>
+                  <i
+                       class="fas fa-chevron-down arrow-icon"
+                       :class="{ 'rotated': expandedMenu === 'modeManagement' }"
+                   ></i>
+               </a>
 
-                <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
-                    <a href="mode.html#status" class="nav-item sub-item">
-                        <i class="fas fa-heartbeat"></i>
-                        <span class="nav-text">状态监控</span>
+             <div class="sub-nav-menu" v-show="expandedMenu === 'modeManagement'">
+                     <a href="mode3.html#quick" class="nav-item sub-item" 
+                     :class="{ active: activeModeTab === 'quick' }"
+                     @click.stop="switchModeTab('quick')">
+                       <i class="fas fa-bolt"></i>
+                       <span class="nav-text">快捷操作</span>
                     </a>
-                    <a href="mode.html#switch" class="nav-item sub-item">
-                        <i class="fas fa-exchange-alt"></i>
-                        <span class="nav-text">模式切换</span>
-                    </a>
-                    <a href="mode.html#history" class="nav-item sub-item">
-                        <i class="fas fa-history"></i>
-                        <span class="nav-text">历史记录</span>
-                    </a>
-                    <a href="mode.html#quick" class="nav-item sub-item">
-                        <i class="fas fa-bolt"></i>
-                        <span class="nav-text">快速操作</span>
-                    </a>
-                </div>
-            </div>
+                  <a href="mode3.html#switch" class="nav-item sub-item"
+                     :class="{ active: activeModeTab === 'switch' }"
+                     @click.stop="switchModeTab('switch')">
+                       <i class="fas fa-exchange-alt"></i>
+                       <span class="nav-text">模式切换</span>
+                  </a>
+                  <a href="mode3.html#schedule" class="nav-item sub-item"
+                     :class="{ active: activeModeTab === 'schedule' }"
+                      @click.stop="switchModeTab('schedule')">
+                      <i class="fas fa-calendar-alt"></i>
+                      <span class="nav-text">模式排程</span>
+                  </a>
+                  <a href="mode3.html#history" class="nav-item sub-item"
+                      :class="{ active: activeModeTab === 'history' }"
+                      @click.stop="switchModeTab('history')">
+                      <i class="fas fa-history"></i>
+                      <span class="nav-text">历史记录</span>
+                  </a>
+                   <a href="mode3.html#edit" class="nav-item sub-item"
+                     :class="{ active: activeModeTab === 'edit' }"
+                     @click.stop="switchModeTab('edit')">
+                     <i class="fas fa-edit"></i>
+                     <span class="nav-text">编辑模式</span>
+                  </a>
+             </div>
+          </div>
 
 
             <!-- 数据管理与分析 - 包含子菜单 -->
@@ -2025,3 +2039,4 @@
 </script>
 </body>
 </html>
+
